--- a/project4/transaction_calculation(1).html
+++ b/project4/transaction_calculation(1).html
@@ -236,7 +236,7 @@
                 <td>${record.category}</td>
                 <td>${record.description}</td>
                 <td>${record.amount}</td>
-                <td><button class="delete-row" data-id="${record.id}">Delete</button></td>
+                <td><button class="delete-row" data-id="${record.id}" style="padding: 5px; border-radius:15px; background-color: black; color: white;">Delete</button></td>
             `;
                 main.appendChild(record_row);
             });
