validation for category and description separated

--- a/project4/transaction_calculation(1).html
+++ b/project4/transaction_calculation(1).html
@@ -363,12 +363,12 @@
             }
 
             if (!category) {
-                alert('Please enter a category and its description');
+                alert('Please enter a category');
                 return;
             }
 
             if (!description) {
-                alert('Please enter a its description');
+                alert('Please enter its description');
                 return;
             }
 
